<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/navigation_req_icons"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/nav_req_icons" />
    </group>
    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/navigation_about"
                android:title="@string/nav_about" />
        </menu>
    </item>
</menu>